--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,12 @@ springdoc:
   api-docs:
     path: /api-docs
 
+phishing-validator:
+  service:
+    phone-number: 22123123999
+    start: START
+    stop: STOP
+
 #logging:
 #  level:
 #    pl.jakubdrozdz: DEBUG
