--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>phishing-validator.jar</finalName>
     </build>
 
 </project>
