--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: 'true'
+  h2:
+    console:
+      enabled: true
+      path: /h2
+      settings:
+        web-allow-others: true
 springdoc:
   swagger-ui:
     path: /swagger.html
@@ -25,6 +31,6 @@ phishing-validator:
     start: START
     stop: STOP
 
-#logging:
-#  level:
-#    pl.jakubdrozdz: DEBUG
+logging:
+  level:
+    pl.jakubdrozdz: DEBUG
